--- a/.github/workflows/release-server.yml
+++ b/.github/workflows/release-server.yml
@@ -46,6 +46,5 @@ jobs:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
       - run: |
-          docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/lading:${{ github.sha }}
+          docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/lading:${{ github.sha }} -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/lading:latest
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/lading:${{ github.sha }}
-
