--- a/.github/workflows/release-server.yml
+++ b/.github/workflows/release-server.yml
@@ -47,4 +47,4 @@ jobs:
           password: ${{ secrets.REGISTRY_PASSWORD }}
       - run: |
           docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/lading:${{ github.sha }} -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/lading:latest
-          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/lading:${{ github.sha }}
+          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/lading
