--- a/.github/workflows/release-server.yml
+++ b/.github/workflows/release-server.yml
@@ -34,12 +34,12 @@ jobs:
 
       - run: yarn workspace @lading/server test
 
-      - name: 'Login via Azure CLI'
-          uses: azure/login@v1
-          with:
-            creds: ${{ secrets.AZURE_CREDENTIALS }}
-      
-      - name: 'Build and push image'
+      - name: "Login via Azure CLI"
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: "Build and push image"
         uses: azure/docker-login@v1
         with:
           login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
