output type d.ts files for client

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,9 +1,16 @@
 {
   "name": "@lading/client",
   "version": "1.2.0",
-  "module": "index.js",
+  "module": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc"
+  },
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "typescript": "^4.1.3"
   }
 }
