--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@lading/client",
   "version": "1.2.0",
-  "module": "./lib/index.js",
-  "types": "./lib/index.d.ts",
+  "module": "index.js",
+  "types": "lib/index.d.ts",
   "license": "MIT",
   "scripts": {
     "build": "tsc"
