--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,6 +7,11 @@
   "scripts": {
     "build": "tsc"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/microsoft/lading.git",
+    "directory":"packages/client"
+  },
   "publishConfig": {
     "access": "public"
   },
