--- a/packages/cloudpack/package.json
+++ b/packages/cloudpack/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "start": "node src/server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/microsoft/lading.git",
+    "directory":"packages/cloudpack"
+  },
   "dependencies": {
     "camelcase": "^6.2.0",
     "express": "^4.17.1"
