--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -7,6 +7,11 @@
   "scripts": {
     "start": "webpack serve"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/microsoft/lading.git",
+    "directory":"packages/example"
+  },
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
